Updates for changed folder structure in version 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - pip install setuptools
 script:
-  - cp drawiobatch/drawio/war/templates/uml/uml_1.xml test.xml
+  - cp ./drawiobatch/drawio/src/main/webapp/templates/uml/uml_1.xml test.xml
   - python3 drawiobatch/__init__.py test.xml out.pdf && file out.pdf | grep 'PDF document'
   - python3 setup.py install && rm -rf drawiobatch && rm -f out.pdf && drawio-batch test.xml out.pdf && file out.pdf | grep 'PDF document'
 
