--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "drawio-batch",
-  "version": "1.0.0",
+  "version": "8.5.3",
   "description": "A command line converter for drawio diagrams",
-  "main": "index.js",
+  "main": "drawio-batch.js",
   "dependencies": {
     "commander": "^2.15.1",
     "puppeteer": "^1.2.0"
+  },
+  "pkg": {
+    "assets": "drawio/**/*"
   },
   "devDependencies": {},
   "scripts": {
@@ -16,8 +19,7 @@
     "url": "git+ssh://git@github.com/languitar/drawio-batch.git"
   },
   "keywords": [
-    "command",
-    "line",
+    "command ling",
     "drawio"
   ],
   "author": "Johannes Wienke",
@@ -25,5 +27,5 @@
   "bugs": {
     "url": "https://github.com/languitar/drawio-batch/issues"
   },
-  "homepage": "https://github.com/languitar/drawio-batch#readme"
+  "homepage": "https://github.com/languitar/drawio-batch"
 }
