--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "bin": "drawio-batch.js",
   "dependencies": {
     "commander": "^2.19.0",
-    "puppeteer": "^1.9.0"
+    "puppeteer": "^1.9.0",
+    "xpath": "^0.0.27",
+    "xmldom": "^0.1.27"
   },
   "pkg": {
     "assets": "drawio/**/*"
